# pytypest

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: api.md  conf.py  experimental.md  fixture.md  fixtures.md  index.md  motivation.md  parametrize.md  recipes.md
integration/: test_args.py  test_args_n_teardown.py  test_attr.py  test_container.py  test_parametrize.py  test_scope_class.py  test_simple.py  test_teardown.py  test_unwrap.py
pytypest/: __init__.py  _autouse.py  _case.py  _fixture.py  _fixture_factory.py  _hub.py  _manager.py  _parametrize.py  _plugin.py  _scope.py  _scope_manager.py
pytypest/experimental/: __init__.py  _attr.py  _patcher.py
pytypest/fixtures/: __init__.py  _helpers.py  _misc.py  _monkeypatch.py  _patcher.py  _pytest.py
tests/: conftest.py  test_autouse.py  test_experimental.py  test_fixtrues.py  test_fixture.py  test_parametrize.py
